body overflow bug fixed

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -46,9 +46,11 @@ body {
     max-width: 100vw;
     position: relative;
     overflow: hidden;
+    overflow-y: scroll;
     cursor: url('../img/cursor-sponge.png'), auto !important;
     @media screen and (max-width: $tablet) {
         font-size: $font-size-mobile;
+        overflow-y: scroll;
     }
     &.lock-scroll {
         overflow: hidden;
